Update current doing stuff and tools

--- a/index.html
+++ b/index.html
@@ -36,13 +36,22 @@
       <h2 class="section__title">What I am doing</h2>
       <ul>
         <li><strong>Working</strong>: at <a href="http://www.zemoga.com/" target="_blank">Zemoga</a> as Senior Front End Web Developer -- So much fun and learning new things everyday with a great team</li>
-        <li><strong>Learning</strong>: React JS -- JSX I can’t accept you … yet (40%)
+        <li><strong>Learning</strong>: 
+          <ul>
+            <li>Node JS -- from scracth and deeply (20%)</li>
+            <li>React JS -- JSX I can’t accept you … yet (20% - PAUSED)</li>
+          </ul> 
         </li>
-        <li><strong>Writing</strong>: <a href="https://www.gitbook.com/book/gmoralesc/introduccion-a-ruby-on-rails/details" target="_blank">Introducción a Ruby on Rails</a> -- Why not?, the best way to learn is sharing what you have in your mind. (10%) and also checkout this playlist about <a href="https://www.youtube.com/playlist?list=PLVkJMXNbOF6SV4iBfCvlZ61EvLzLeB5xV" target="blank">Ruby on Rails (3.2) - Micropost App</a> -- Oldy but good
+        <li><strong>Writing</strong>: 
+          <ul>
+            <li><a href="https://github.com/gmoralesc/nodejs/wiki" target="_blank">Introducción a Node JS</a> -- Sometimes the best way to learn is teaching to others (20%)</li>
+            <li><a href="https://www.gitbook.com/book/gmoralesc/introduccion-a-ruby-on-rails/details" target="_blank">Introducción a Ruby on Rails</a> -- Why not?, the best way to learn is sharing what you have in your mind. (10% - PAUSED) and also checkout this playlist about <a href="https://www.youtube.com/playlist?list=PLVkJMXNbOF6SV4iBfCvlZ61EvLzLeB5xV" target="blank">Ruby on Rails (3.2) - Micropost App</a> -- Oldy but good
+        </li>
+          </ul>
         </li>
         <li><strong>Watching</strong>: Game Of Thrones -- Of course like another mortal in this world (Season 6 completed)
         </li>
-        <li><strong>Playing</strong>: Civilization V and Civilization VI -- Waiting for Final Fantasy XV
+        <li><strong>Playing</strong>: Civilization VI
         </li>
         <li><strong>Personal projects</strong>: <a href="https://www.npmjs.com/package/costelog" target="_blank">costelog</a> and check out my <a href="http://github.com/gmoralesc" target="_blank">Github</a>
         </li>
@@ -129,6 +138,9 @@
             <li data-stage="0 1">Babel
               <span class="comment"  data-stage="0 1">-- I don't know what to do without this guy</span>
             </li>
+            <li data-stage="0 1">ESlint
+              <span class="comment"  data-stage="0 1">-- Great tool</span>
+            </li>
           </ul>
         </li>
         <li data-stage="0">FrontEnd Frameworks
@@ -153,18 +165,14 @@
             <li data-stage="0 1">Backbone JS
               <span class="comment" data-stage="0 1">-- Instant win</span>
             </li>
-            <li data-stage="0 2">Ember JS
-              <span class="comment hidden" data-stage="2"> -- I want to be honest, don't like, but the CLI is very nice like Rails</span>
-            </li>
-            <li data-stage="0 2">Angular JS
-              <span class="comment" data-stage="0">-- (1.0) Only basic stuff</span>
-              <span class="comment" data-stage="2">-- (2.0) Don't want to go to TypeScript for the same reason I don't went to CoffeScript</span>
-            </li>
             <li data-stage="0 1">Handlebars JS
               <span class="comment" data-stage="0 1">-- Very nice</span>
             </li>
+            <li data-stage="0 2">Ember JS
+              <span class="comment hidden" data-stage="2"> -- I want to be honest, don't like, but the CLI is very nice like Rails</span>
+            </li>
             <li data-stage="0 1">React JS
-              <span class="comment" data-stage="0 1">-- Learning (30%) - Setup and basic app. <a href="https://github.com/airbnb/javascript/tree/master/react" target="_blank">Airbnb React/JSX Style Guide</a></span>
+              <span class="comment" data-stage="0 1">-- Learning (20% - PAUSED) - Setup and basic app. <a href="https://github.com/airbnb/javascript/tree/master/react" target="_blank">Airbnb React/JSX Style Guide</a></span>
             </li>
           </ul>
         </li>
@@ -181,8 +189,8 @@
             <li data-stage="0 1">npm and Webpack
               <span class="comment" data-stage="0 1">-- Yes, check out this <a href="https://github.com/gmoralesc/boilerplate-npm-webpack" target="_blank">repo</a></span>
             </li>
-            <li data-stage="0">Gulp
-              <span class="comment" data-stage="0">-- Simple and helpful</span>
+            <li data-stage="0 2">Gulp
+              <span class="comment" data-stage="0 2">-- Simple and helpful</span>
             </li>
             <li data-stage="0 2">Grunt
               <span class="comment hidden" data-stage="2">-- Rarely used</span>
