Update social network links

--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
         <br>Living in <a href="https://www.google.com.co/maps/place/Barranquilla,+Atl%C3%A1ntico/@10.9915714,-74.979092,11z/data=!3m1!4b1!4m5!3m4!1s0x8ef42c5022d41139:0x7777c8d5cf47bec!8m2!3d10.983812!4d-74.818017?hl=en" target="_blank">Barranquilla, Colombia</a></p>
       <p>Engineer in Computer Science, FullStack Web Developer, Undergraduate and Graduate Professor</p>
       <p>
-        <a href="http://gmoralesc.me">gmoralesc.me</a>
+        Webpage: <a href="http://gmoralesc.me">gmoralesc.me</a>
         <br>
-        <a href="mailto:gustavo.morales@gmail.com">gustavo.morales@gmail.com</a>
+        Linkedin: <a href="https://co.linkedin.com/in/gmoralesc">gmoralesc</a>
         <br>
-        <a href="https://twitter.com/gmoralesc" target="_blank">@gmoralesc</a>
+        Email: <a href="mailto:gustavo.morales@gmail.com">gustavo.morales@gmail.com</a>
         <br>
-        <a href="http://github.com/gmoralesc" target="_blank">github.com/gmoralesc</a>
+        Twitter: <a href="https://twitter.com/gmoralesc" target="_blank">@gmoralesc</a>
+        <br>
+        Github: <a href="http://github.com/gmoralesc" target="_blank">github.com/gmoralesc</a>
       </p>
     </section>
   </header>
