--- a/index.html
+++ b/index.html
@@ -37,11 +37,15 @@
     <section class="section">
       <h2 class="section__title">What I am doing</h2>
       <ul>
-        <li><strong>Working</strong>: at <a href="http://www.zemoga.com/" target="_blank">Zemoga</a> as Senior Front End Web Developer -- So much fun and learning new things everyday with a great team</li>
+        <li><strong>Working</strong>:
+          <ul>
+            <li><a href="http://www.zemoga.com/" target="_blank">Zemoga</a> as Senior Front End Web Developer -- So much fun and learning new things everyday with a great team</li>
+            <li><a href="http://www.uninorte.edu.co/" target="_blank">Universidad del Norte</a> as Graduate Partial Time Professor -- I love teaching</li>
+          </ul>
+        </li>  
         <li><strong>Learning</strong>: 
           <ul>
-            <li>Node JS -- from scracth and deeply (20%)</li>
-            <li>React JS -- JSX I can’t accept you … yet (20% - PAUSED)</li>
+            <li>Vue JS -- Small footprint, awesome features out the box</li>
           </ul> 
         </li>
         <li><strong>Writing</strong>: 
@@ -51,16 +55,29 @@
         </li>
           </ul>
         </li>
-        <li><strong>Watching</strong>: Game Of Thrones -- Of course like another mortal in this world (Season 6 completed)
+        <li><strong>Watching</strong>: 
+          <ul>
+            <li>Game Of Thrones -- Of course, like another mortal in this world (Season 6 completed)</li>
+            <li>Rick and Morty -- Great show, waiting for Season 3.</li>
+          </ul>
         </li>
-        <li><strong>Playing</strong>: Civilization VI
+        <li><strong>Playing</strong>: 
+          <ul>
+            <li>Civilization VI -- Great strategy game turn based</li>
+          </ul>
         </li>
-        <li><strong>Personal projects</strong>: <a href="https://www.npmjs.com/package/costelog" target="_blank">costelog</a> and check out my <a href="http://github.com/gmoralesc" target="_blank">Github</a>
+        <li><strong>Personal projects</strong>: 
+          <ul>
+            <li><a href="https://www.npmjs.com/package/costelog" target="_blank">costelog</a></li>
+            <li>Check out my <a href="http://github.com/gmoralesc" target="_blank">Github</a></li>
+          </ul>
         </li>
       </ul>
     </section>
     <section class="section">
       <h2 class="section__title">Professional experience</h2>
+      <h3 class="section__subtitle">Summary</h3>
+      <p><strong>Web enthusiastic</strong> from 1999 starts with NotePad, Macromedia Dreamweaver (Adobe buy it later), Sublime Text and Visual Studio Code (Microsoft, I kwon, something is happening in this company). Browser wars beetween Netscape (now Mozilla Firefox) and Internet Exploiter (No, is no a typo). Respectful W3C standards and Javascript evangelist.</p>
       <h3 class="section__subtitle">Current</h3>
       <ul>
         <li><strong>Senior UI Developer (From 2015)</strong>
@@ -79,8 +96,6 @@
           </ul>
         </li>
       </ul>
-      <h3 class="section__subtitle">Unofficial</h3>
-      <p><strong>Web enthusiastic</strong> from 1999 starts with NotePad, Macromedia Dreamweaver (Adobe buy it later) and Sublime Text. Browser wars beetween Netscape (now Mozilla Firefox) and Internet Exploiter (No, is no a typo). Respectful W3C standards and Javascript evangelist.</p>
       <h3 class="section__subtitle">Past</h3>
       <ul>
         <li><strong>Senior Front End Web Developer</strong>
@@ -140,7 +155,7 @@
             <li data-stage="0 1">Babel
               <span class="comment"  data-stage="0 1">-- I don't know what to do without this guy</span>
             </li>
-            <li data-stage="0 1">ESlint
+            <li data-stage="0 1">JSlint
               <span class="comment"  data-stage="0 1">-- Great tool</span>
             </li>
           </ul>
@@ -164,17 +179,20 @@
             <li data-stage="0 1">Loadash
               <span class="comment" data-stage="1">-- Yes, now I prefer Lodash here is a <a href="http://stackoverflow.com/questions/13789618/differences-between-lodash-and-underscore#answer-13898916" target="_blank">cool response for that</a></span>
             </li>
-            <li data-stage="0 1">Backbone JS
+            <li data-stage="0">Backbone JS
               <span class="comment" data-stage="0 1">-- Instant win</span>
             </li>
-            <li data-stage="0 1">Handlebars JS
+            <li data-stage="0">Handlebars JS
               <span class="comment" data-stage="0 1">-- Very nice</span>
             </li>
             <li data-stage="0 2">Ember JS
               <span class="comment hidden" data-stage="2"> -- I want to be honest, don't like, but the CLI is very nice like Rails</span>
             </li>
-            <li data-stage="0 1">React JS
+            <li data-stage="0">React JS
               <span class="comment" data-stage="0 1">-- Learning (20% - PAUSED) - Setup and basic app. <a href="https://github.com/airbnb/javascript/tree/master/react" target="_blank">Airbnb React/JSX Style Guide</a></span>
+            </li>
+            <li data-stage="0 1">Vue JS
+              <span class="comment" data-stage="0 1">-- Small footprint, awesome features out of the box</span>
             </li>
           </ul>
         </li>
