Add bcrypt and jwt to Node stack

--- a/index.html
+++ b/index.html
@@ -245,6 +245,8 @@
         <li data-stage="0 1">Express JS
           <span class="comment" data-stage="0 1">-- Small but powerful</span>
         </li>
+        <li data-stage="0 1">BCrypt and JWT for Auth
+        </li>
         <li data-stage="0 1">MongoDB
           <span class="comment" data-stage="0 1">-- Basic use</span>
         </li>
