Fix typo errors

--- a/index.html
+++ b/index.html
@@ -18,18 +18,15 @@
       <p class="card__image"><img src="public/images/me-circle.png" alt="Gustavo Morales"></p>
       <h2 class="card__subtitle">About me</h2>
       <p>Husband, Father, Self learner and Apple Fan
-        <br>Living in <a href="https://www.google.com.co/maps/place/Barranquilla,+Atl%C3%A1ntico/@10.9915714,-74.979092,11z/data=!3m1!4b1!4m5!3m4!1s0x8ef42c5022d41139:0x7777c8d5cf47bec!8m2!3d10.983812!4d-74.818017?hl=en" target="_blank">Barranquilla, Colombia</a></p>
+        <br>Living in <a href="https://www.google.com.co/maps/place/Barranquilla,+Atl%C3%A1ntico/@10.9915714,-74.979092,11z/data=!3m1!4b1!4m5!3m4!1s0x8ef42c5022d41139:0x7777c8d5cf47bec!8m2!3d10.983812!4d-74.818017?hl=en"
+          target="_blank">Barranquilla, Colombia</a></p>
       <p>Engineer in Computer Science, FullStack Web Developer, Undergraduate and Graduate Professor</p>
       <p>
         Webpage: <a href="http://gmoralesc.me">gmoralesc.me</a>
-        <br>
-        Linkedin: <a href="https://co.linkedin.com/in/gmoralesc">gmoralesc</a>
-        <br>
-        Email: <a href="mailto:gustavo.morales@gmail.com">gustavo.morales@gmail.com</a>
-        <br>
-        Twitter: <a href="https://twitter.com/gmoralesc" target="_blank">@gmoralesc</a>
-        <br>
-        Github: <a href="http://github.com/gmoralesc" target="_blank">github.com/gmoralesc</a>
+        <br> Linkedin: <a href="https://co.linkedin.com/in/gmoralesc">gmoralesc</a>
+        <br> Email: <a href="mailto:gustavo.morales@gmail.com">gustavo.morales@gmail.com</a>
+        <br> Twitter: <a href="https://twitter.com/gmoralesc" target="_blank">@gmoralesc</a>
+        <br> Github: <a href="http://github.com/gmoralesc" target="_blank">github.com/gmoralesc</a>
       </p>
     </section>
   </header>
@@ -39,34 +36,38 @@
       <ul>
         <li><strong>Working</strong>:
           <ul>
-            <li><a href="http://www.zemoga.com/" target="_blank">Zemoga</a> as Senior Front End Web Developer -- So much fun and learning new things everyday with a great team</li>
-            <li><a href="http://www.uninorte.edu.co/" target="_blank">Universidad del Norte</a> as Graduate Partial Time Professor -- I love teaching</li>
+            <li><a href="http://www.zemoga.com/" target="_blank">Zemoga</a> as Senior Front End Web Developer -- So much fun
+              and learning new things everyday with a great team</li>
+            <li><a href="http://www.uninorte.edu.co/" target="_blank">Universidad del Norte</a> as Graduate Partial Time Professor
+              -- I love teaching</li>
           </ul>
-        </li>  
-        <li><strong>Learning</strong>: 
+        </li>
+        <li><strong>Learning</strong>:
           <ul>
             <li>Vue JS -- Small footprint, awesome features out the box</li>
-          </ul> 
-        </li>
-        <li><strong>Writing</strong>: 
-          <ul>
-            <li><a href="https://github.com/gmoralesc/nodejs/wiki" target="_blank">Introducción a Node JS</a> -- Sometimes the best way to learn is teaching to others (20%)</li>
-            <li><a href="https://www.gitbook.com/book/gmoralesc/introduccion-a-ruby-on-rails/details" target="_blank">Introducción a Ruby on Rails</a> -- Why not?, the best way to learn is sharing what you have in your mind. (10% - PAUSED) and also checkout this playlist about <a href="https://www.youtube.com/playlist?list=PLVkJMXNbOF6SV4iBfCvlZ61EvLzLeB5xV" target="blank">Ruby on Rails (3.2) - Micropost App</a> -- Oldy but good
-        </li>
           </ul>
         </li>
-        <li><strong>Watching</strong>: 
+        <li><strong>Writing</strong>:
+          <ul>
+            <li><a href="https://github.com/gmoralesc/nodejs/wiki" target="_blank">Introducción a Node JS</a> -- Sometimes the
+              best way to learn is teaching to others (20%)</li>
+            <li><a href="https://www.gitbook.com/book/gmoralesc/introduccion-a-ruby-on-rails/details" target="_blank">Introducción a Ruby on Rails</a>              -- Why not?, the best way to learn is sharing what you have in your mind. (10% - PAUSED) and also checkout
+              this playlist about <a href="https://www.youtube.com/playlist?list=PLVkJMXNbOF6SV4iBfCvlZ61EvLzLeB5xV" target="blank">Ruby on Rails (3.2) - Micropost App</a>              -- Oldy but good
+            </li>
+          </ul>
+        </li>
+        <li><strong>Watching</strong>:
           <ul>
             <li>Game Of Thrones -- Of course, like another mortal in this world (Season 6 completed)</li>
             <li>Rick and Morty -- Great show, waiting for Season 3.</li>
           </ul>
         </li>
-        <li><strong>Playing</strong>: 
+        <li><strong>Playing</strong>:
           <ul>
             <li>Civilization VI -- Great strategy game turn based</li>
           </ul>
         </li>
-        <li><strong>Personal projects</strong>: 
+        <li><strong>Personal projects</strong>:
           <ul>
             <li><a href="https://www.npmjs.com/package/costelog" target="_blank">costelog</a></li>
             <li>Check out my <a href="http://github.com/gmoralesc" target="_blank">Github</a></li>
@@ -77,7 +78,9 @@
     <section class="section">
       <h2 class="section__title">Professional experience</h2>
       <h3 class="section__subtitle">Summary</h3>
-      <p><strong>Web enthusiastic</strong> from 1999 starts with NotePad, Macromedia Dreamweaver (Adobe buy it later), Sublime Text and Visual Studio Code (Microsoft, I kwon, something is happening in this company). Browser wars beetween Netscape (now Mozilla Firefox) and Internet Exploiter (No, is no a typo). Respectful W3C standards and Javascript evangelist.</p>
+      <p><strong>Web enthusiastic</strong> from 1999 starts with NotePad, Macromedia Dreamweaver (Adobe buyed it later), Sublime
+        Text and Visual Studio Code (Microsoft, I know, something is happening in this company). Browser wars beetween Netscape
+        (now Mozilla Firefox) and Internet Exploiter (No, is no a typo). Respectful W3C standards and Javascript evangelist.</p>
       <h3 class="section__subtitle">Current</h3>
       <ul>
         <li><strong>Senior UI Developer (From 2015)</strong>
@@ -101,8 +104,7 @@
         <li><strong>Senior Front End Web Developer</strong>
           <br>
           <a href="https://koombea.com/" target="_blank">Koombea</a></li>
-        <li><strong>Engineer in technology for Education</strong><br>
-          Blackboard Content Creator<br>
+        <li><strong>Engineer in technology for Education</strong><br> Blackboard Content Creator<br>
           <a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a></li>
       </ul>
     </section>
@@ -124,7 +126,8 @@
       </ul>
       <h3 class="section__subtitle">Honors and awards</h3>
       <ul>
-        <li>“Excelencia Académica en el Aula de Clase” (Award for Academic Excellence in the Classroom) 2009, 2010, 2011, 2012, 2013 - Universidad del Norte, Barranquilla, Colombia.</li>
+        <li>“Excelencia Académica en el Aula de Clase” (Award for Academic Excellence in the Classroom) 2009, 2010, 2011, 2012,
+          2013 - Universidad del Norte, Barranquilla, Colombia.</li>
       </ul>
     </section>
     <section class="section" id="technologies">
@@ -153,10 +156,10 @@
           <ul>
             <li data-stage="0 1">ES5 and ES2015</li>
             <li data-stage="0 1">Babel
-              <span class="comment"  data-stage="0 1">-- I don't know what to do without this guy</span>
+              <span class="comment" data-stage="0 1">-- I don't know what to do without this guy</span>
             </li>
             <li data-stage="0 1">JSlint
-              <span class="comment"  data-stage="0 1">-- Great tool</span>
+              <span class="comment" data-stage="0 1">-- Great tool</span>
             </li>
           </ul>
         </li>
@@ -234,7 +237,7 @@
           </ul>
         </li>
       </ul>
-      <h3 class="section__subtitle"  data-stage="0 1">Middleware</h3>
+      <h3 class="section__subtitle" data-stage="0 1">Middleware</h3>
       <ul>
         <li data-stage="0 1">Node JS
           <span class="comment" data-stage="0 1">-- This guy is a whole new world</span>
@@ -307,7 +310,8 @@
         <li><a href="https://frontendmasters.com/" target="_blank">FrontEnd Masters</a></li>
         <li><a href="https://developer.mozilla.org/en/" target="_blank">Mozilla Developer Network</a></li>
         <li><a href="http://code.tutsplus.com/" target="_blank">Net Tuts +</a></li>
-        <li><a href="https://teamtreehouse.com/" target="_blank">Team Treehouse</a>, checkout my <a href="http://teamtreehouse.com/gmoralesc" target="_blank">public profile</a></li>
+        <li><a href="https://teamtreehouse.com/" target="_blank">Team Treehouse</a>, checkout my <a href="http://teamtreehouse.com/gmoralesc"
+            target="_blank">public profile</a></li>
         <li><a href="https://www.sitepoint.com/" target="_blank">SitePoint</a></li>
         <li><a href="https://github.com/getify/You-Dont-Know-JS" target="_blank">You Don't Know JS</a></li>
         <li>Tons of channels in Youtube</li>
@@ -328,33 +332,33 @@
     </section>
   </section>
   <script>
-  function removeClass(el, className){
-    if( el.className.indexOf(className) !== -1){
-        el.className = el.className.slice(0,el.className.indexOf("hidden")-1);
+    function removeClass(el, className) {
+      if (el.className.indexOf(className) !== -1) {
+        el.className = el.className.slice(0, el.className.indexOf("hidden") - 1);
+      }
     }
-  }
 
-  function addClass(el, className){
-    el.className = el.className + " " + className;
-  }
+    function addClass(el, className) {
+      el.className = el.className + " " + className;
+    }
 
-  function filter_tecnologies() {
-    var filter = document.getElementById("filter");
-    var selected_filter = filter.options[filter.selectedIndex].value;
-    var tecnologies_section = document.getElementById("technologies");
-    var items = tecnologies_section.querySelectorAll("li, span, h3");
+    function filter_tecnologies() {
+      var filter = document.getElementById("filter");
+      var selected_filter = filter.options[filter.selectedIndex].value;
+      var tecnologies_section = document.getElementById("technologies");
+      var items = tecnologies_section.querySelectorAll("li, span, h3");
 
-    for (var index = 0; index < items.length; index++) {
-      var data_stage = items[index].getAttribute("data-stage");
-      if (data_stage) {
-        if (data_stage.indexOf(selected_filter) >= 0) {
-          removeClass(items[index], "hidden");
-        } else {
-          addClass(items[index], "hidden");
+      for (var index = 0; index < items.length; index++) {
+        var data_stage = items[index].getAttribute("data-stage");
+        if (data_stage) {
+          if (data_stage.indexOf(selected_filter) >= 0) {
+            removeClass(items[index], "hidden");
+          } else {
+            addClass(items[index], "hidden");
+          }
         }
       }
     }
-  }
   </script>
 </body>
 
