Update tools and profile

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </li>
         <li><strong>Learning</strong>:
           <ul>
-            <li>Vue JS -- Small footprint, awesome features out the box</li>
+            <li><a href="https://vuejs.org/" target="_blank">Vue JS</a> -- Small footprint, awesome features out the box</li>
           </ul>
         </li>
         <li><strong>Writing</strong>:
@@ -58,13 +58,13 @@
         </li>
         <li><strong>Watching</strong>:
           <ul>
-            <li>Game Of Thrones -- Of course, like another mortal in this world (Season 6 completed)</li>
-            <li>Rick and Morty -- Great show, waiting for Season 3.</li>
+            <li>Game Of Thrones -- Season 7 - Of course, like another mortal in this world</li>
+            <li>Rick and Morty -- Season 3 - Great show</li>
           </ul>
         </li>
         <li><strong>Playing</strong>:
           <ul>
-            <li>Civilization VI -- Great strategy game turn based</li>
+            <li><a href="https://civilization.com/" target="_blank">Civilization VI</a> -- Great strategy game turn based</li>
           </ul>
         </li>
         <li><strong>Personal projects</strong>:
@@ -158,8 +158,11 @@
             <li data-stage="0 1">Babel
               <span class="comment" data-stage="0 1">-- I don't know what to do without this guy</span>
             </li>
-            <li data-stage="0 1">JSlint
+            <li data-stage="0">JSlint
               <span class="comment" data-stage="0 1">-- Great tool</span>
+            </li>
+            <li data-stage="0 1">ESlint
+              <span class="comment" data-stage="0 1">-- Very configurable</span>
             </li>
           </ul>
         </li>
@@ -182,10 +185,10 @@
             <li data-stage="0 1">Loadash
               <span class="comment" data-stage="1">-- Yes, now I prefer Lodash here is a <a href="http://stackoverflow.com/questions/13789618/differences-between-lodash-and-underscore#answer-13898916" target="_blank">cool response for that</a></span>
             </li>
-            <li data-stage="0">Backbone JS
-              <span class="comment" data-stage="0 1">-- Instant win</span>
+            <li data-stage="0 2">Backbone JS
+              <span class="comment" data-stage="0 1">-- Instant win, but now Vue JS offer more</span>
             </li>
-            <li data-stage="0">Handlebars JS
+            <li data-stage="0 2">Handlebars JS
               <span class="comment" data-stage="0 1">-- Very nice</span>
             </li>
             <li data-stage="0 2">Ember JS
@@ -204,6 +207,7 @@
             <li data-stage="0 1">npm
               <span class="comment" data-stage="0 1">-- Preferred</span>
             </li>
+            <li data-stage="0">Yarn</li>
             <li data-stage="0">bower</li>
           </ul>
         </li>
@@ -251,7 +255,7 @@
         <li data-stage="0 1">BCrypt and JWT for Auth
         </li>
         <li data-stage="0 1">MongoDB
-          <span class="comment" data-stage="0 1">-- Basic use</span>
+          <span class="comment" data-stage="0 1">-- Easy</span>
         </li>
       </ul>
       <h3 class="section__subtitle">Backend</h3>
@@ -289,7 +293,8 @@
         <li data-stage="0 1">Postman <span class="comment" data-stage="0 1">-- Great tool</span></li>
         <li data-stage="0 1">Git and Github <span class="comment">-- I love command line with ZSH</span></li>
         <li data-stage="0 1">Git Commitezen <span class="comment" data-stage="0 1">-- Standard commit output</span></li>
-        <li data-stage="0">Vagrant and VirtualBox <span class="comment">-- Pending to learn Docker</span></li>
+        <li data-stage="0">Vagrant and VirtualBox <span class="comment">-- For Windows</span></li>
+        <li data-stage="0 1">Docker <span class="comment">-- Great tool, great solution</span></li>
         <li data-stage="0 1">Heroku <span class="comment">-- Easy to use</span></li>
         <li data-stage="0 1">Travis CI <span class="comment">-- Very nice and simple</span></li>
       </ul>
@@ -310,8 +315,6 @@
         <li><a href="https://frontendmasters.com/" target="_blank">FrontEnd Masters</a></li>
         <li><a href="https://developer.mozilla.org/en/" target="_blank">Mozilla Developer Network</a></li>
         <li><a href="http://code.tutsplus.com/" target="_blank">Net Tuts +</a></li>
-        <li><a href="https://teamtreehouse.com/" target="_blank">Team Treehouse</a>, checkout my <a href="http://teamtreehouse.com/gmoralesc"
-            target="_blank">public profile</a></li>
         <li><a href="https://www.sitepoint.com/" target="_blank">SitePoint</a></li>
         <li><a href="https://github.com/getify/You-Dont-Know-JS" target="_blank">You Don't Know JS</a></li>
         <li>Tons of channels in Youtube</li>
