Update Learning and Writing status

--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
               -- I love teaching</li>
           </ul>
         </li>
-        <li><strong>Learning</strong>:
-          <ul>
-            <li><a href="https://vuejs.org/" target="_blank">Vue JS</a> -- Small footprint, awesome features out the box</li>
-          </ul>
-        </li>
         <li><strong>Writing</strong>:
           <ul>
             <li><a href="https://github.com/gmoralesc/nodejs/wiki" target="_blank">Introducción a Node JS</a> -- Sometimes the
-              best way to learn is teaching to others (20%)</li>
+              best way to learn is teaching to others (50%)</li>
             <li><a href="https://www.gitbook.com/book/gmoralesc/introduccion-a-ruby-on-rails/details" target="_blank">Introducción a Ruby on Rails</a>              -- Why not?, the best way to learn is sharing what you have in your mind. (10% - PAUSED) and also checkout
               this playlist about <a href="https://www.youtube.com/playlist?list=PLVkJMXNbOF6SV4iBfCvlZ61EvLzLeB5xV" target="blank">Ruby on Rails (3.2) - Micropost App</a>              -- Oldy but good
             </li>
+          </ul>
+        </li>
+        <li><strong>Learning</strong>:
+          <ul>
+            <li>Docker and Amazon Web Services</li>
           </ul>
         </li>
         <li><strong>Watching</strong>:
