Update projects and courses

--- a/index.html
+++ b/index.html
@@ -36,29 +36,44 @@
       <ul>
         <li><strong>Working</strong>:
           <ul>
-            <li><a href="http://www.zemoga.com/" target="_blank">Zemoga</a> as Senior Front End Web Developer -- So much fun
-              and learning new things everyday with a great team</li>
-            <li><a href="http://www.uninorte.edu.co/" target="_blank">Universidad del Norte</a> as Graduate Partial Time Professor
-              -- I love teaching</li>
+            <li>
+              <a href="http://www.zemoga.com/" target="_blank">Zemoga</a> as Senior Front End Web Developer -- So much fun
+              and learning new things everyday with a great team<br>
+              <blockquote>
+                <u>Current project</u>:<br>
+                  Using Node JS to consume REST Services from Backend (Java) and use as middleware to convert data and 
+                  manage session storage, developing Web applications with Ember and Web components using first Backbone and now migrating to Vue JS.
+              </blockquote>
+            </li>
+            <li>
+              <a href="http://www.uninorte.edu.co/" target="_blank">Universidad del Norte</a> as Graduate Partial Time Professor -- I love teaching<br>
+                <blockquote>
+                  <u>Courses</u>:<br>
+                   - Tools for development: using Docker, git, Redmine and AWS. <br>
+                   - Web Development: Node JS, Mongodb, Vue JS.
+                </blockquote>
+            </li>
           </ul>
         </li>
-        <li><strong>Writing</strong>:
+        <li><strong>Writing</strong><br>
+          -- Sometimes the best way to learn is teaching to others:
           <ul>
-            <li><a href="https://github.com/gmoralesc/nodejs/wiki" target="_blank">Introducción a Node JS</a> -- Sometimes the
-              best way to learn is teaching to others (50%)</li>
-            <li><a href="https://www.gitbook.com/book/gmoralesc/introduccion-a-ruby-on-rails/details" target="_blank">Introducción a Ruby on Rails</a>              -- Why not?, the best way to learn is sharing what you have in your mind. (10% - PAUSED) and also checkout
-              this playlist about <a href="https://www.youtube.com/playlist?list=PLVkJMXNbOF6SV4iBfCvlZ61EvLzLeB5xV" target="blank">Ruby on Rails (3.2) - Micropost App</a>              -- Oldy but good
+            <li>
+              <a href="https://gmoralesc.gitbooks.io/introduccion-a-node-js/content/" target="_blank">Introducción a Node JS</a>
+            </li>
+            <li>
+              <a href="https://github.com/gmoralesc/nodejs/wiki" target="_blank">Crear un API con Node JS, Express y MongoDB</a>
             </li>
           </ul>
         </li>
         <li><strong>Learning</strong>:
           <ul>
-            <li>Docker and Amazon Web Services</li>
+            <li>Docker Swarm and Amazon Web Services</li>
           </ul>
         </li>
         <li><strong>Watching</strong>:
           <ul>
-            <li>Game Of Thrones -- Season 7 - Of course, like another mortal in this world</li>
+            <li>Game Of Thrones -- Season 7 (Completed) - Of course, like another mortal in this world</li>
             <li>Rick and Morty -- Season 3 - Great show</li>
           </ul>
         </li>
