--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Engineer in Computer Science, Web Developer, Undergraduate and Graduate Professor and Apple Fan">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
   <link rel="stylesheet" href="public/css/main.css">
+  <link rel="stylesheet" href="public/css/print.css" media="print">
 </head>
 
 <body>
