--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p>Husband, Father, Self learner and Apple Fan
         <br>Living in <a href="https://www.google.com.co/maps/place/Barranquilla,+Atl%C3%A1ntico/@10.9915714,-74.979092,11z/data=!3m1!4b1!4m5!3m4!1s0x8ef42c5022d41139:0x7777c8d5cf47bec!8m2!3d10.983812!4d-74.818017?hl=en"
           target="_blank">Barranquilla, Colombia</a></p>
-      <p>Engineer in Computer Science, FullStack Web Developer, Undergraduate and Graduate Professor</p>
+      <p>Full Stack Software Engineer, Undergraduate and Graduate Professor, Engineer in Computer Science</p>
       <p>
         Webpage: <a href="http://gmoralesc.me">gmoralesc.me</a>
         <br> Linkedin: <a href="https://co.linkedin.com/in/gmoralesc">gmoralesc</a>
@@ -38,7 +38,7 @@
         <li><strong>Working</strong>:
           <ul>
             <li>
-              <a href="http://www.zemoga.com/" target="_blank">Zemoga</a> as Senior Front End Web Developer -- So much fun
+              <a href="http://www.zemoga.com/" target="_blank">Zemoga</a> as Full Stack Software Engineer -- So much fun
               and learning new things everyday with a great team<br>
               <blockquote>
                 <u>Current project</u>:<br>
@@ -51,7 +51,7 @@
                 <blockquote>
                   <u>Courses</u>:<br>
                    - Tools for development: using Docker, git, Redmine and AWS. <br>
-                   - Web Development: Node JS, Mongodb, Vue JS.
+                   - Web Development: using Ruby on Rails and PostgreSQL.
                 </blockquote>
             </li>
           </ul>
@@ -64,6 +64,9 @@
             </li>
             <li>
               <a href="https://github.com/gmoralesc/creando-apis-con-node-js" target="_blank">Crear un API con Node JS, Express y MongoDB</a>
+            </li>
+            <li>
+              Ruby on Rails Up and Running videos
             </li>
           </ul>
         </li>
@@ -94,20 +97,20 @@
     <section class="section">
       <h2 class="section__title">Professional experience</h2>
       <h3 class="section__subtitle">Summary</h3>
-      <p><strong>Web enthusiastic</strong> from 1999 starts with NotePad, Macromedia Dreamweaver (Adobe buyed it later), Sublime
+      <p><strong>Web enthusiastic</strong> from 1999 starts with NotePad, Macromedia Dreamweaver, Sublime
         Text and Visual Studio Code (Microsoft, I know, something is happening in this company). Browser wars beetween Netscape
         (now Mozilla Firefox) and Internet Exploiter (No, is no a typo). Respectful W3C standards and Javascript evangelist.</p>
       <h3 class="section__subtitle">Current</h3>
       <ul>
-        <li><strong>Senior UI Developer (From 2015)</strong>
+        <li><strong>Full Stack Software Engineer (From 2015)</strong>
           <br><a href="http://www.zemoga.com/" target="_blank">Zemoga</a></li>
         <li><strong>Partial time Professor (From 2006)</strong>
           <br>Department of Computer Science, <a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a>
           <br>Graduate classes:
           <ul>
             <li>Scrum methodology</li>
-            <li>Developments tools</li>
-            <li>V &amp; V</li>
+            <li>Tools for development</li>
+            <li>Web Development</li>
           </ul>
           Undergraduate classes:
           <ul>
@@ -117,7 +120,7 @@
       </ul>
       <h3 class="section__subtitle">Past</h3>
       <ul>
-        <li><strong>Senior Front End Web Developer</strong>
+        <li><strong>Full Stack Software Engineer</strong>
           <br>
           <a href="https://koombea.com/" target="_blank">Koombea</a></li>
         <li><strong>Engineer in technology for Education</strong><br> Blackboard Content Creator<br>
